# CommonCPP-DevMethodologies

./: CMakeLists.txt  README.md
1_ExceptionHandling/: exception_handle.cpp
2_toUnderlying/: to_underlying_example.cpp
3_DataLogging/: Backlog.md  main.cpp
4_FloatingFixed-Converter/: main.cpp
5_XML-Processor/: CMakelists.txt  example.xml  main.cpp
6_NumericRangeMapping/: main.cpp
